# fauxmail

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: smtp-auth.md  usage-docker.md  usage-local.md
examples/php/: rest.php  send.php
examples/python/: rest.py  send.py
examples/rust/: Cargo.toml
examples/rust-rest/: Cargo.toml
examples/rust-rest/src/: main.rs
examples/rust/src/: main.rs
examples/typescript/: rest.ts  send.ts
src/: lib.rs  main.rs
src/app/: mod.rs
src/db/: mod.rs
src/http/: attachments.rs  logs.rs  messages.rs  mod.rs  search.rs  send.rs  ui.rs
src/models/: mod.rs
src/models/attachment/: attachment_meta.rs  attachment_row.rs  mod.rs
src/models/email/: api_email.rs  db_email.rs  mod.rs
src/models/log/: log_entry.rs  mod.rs
src/models/response/: message_with_attachments.rs  mod.rs
src/smtp/: mod.rs
src/util/: mod.rs
tests/: app.rs
