[package]
name = "fauxmail"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
mailparse = "0.16"
tower = "0.4"
hyper = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
base64 = "0.22"

[profile.dev]
debug = true

[dev-dependencies]
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
